Refactor: sonarqube 코드 품질 개선